--- a/portfolio.html
+++ b/portfolio.html
@@ -47,7 +47,7 @@
         </div>
         <div class="container">
             <div class="row">
-                <div class="col-md-4 sm-12">
+                <div class="col-lg-4 md-6 sm-12">
                     <div class="card" style="width: 18rem; background-color:  #7d968585;">
                         <img src="annoyed blues 2.png" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -55,7 +55,7 @@
                         </div>
                     </div>               
                 </div>
-                <div class="col-md-4 sm-12">
+                <div class="col-lg-4 md-6 sm-12">
                     <div class="card" style="width: 18rem; background-color:  #7d968585;">
                         <img src="Blues hatdog 2.png" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -63,7 +63,7 @@
                         </div>
                     </div>    
                 </div>
-                <div class="col-md-4 sm-12">
+                <div class="col-lg-4 md-6 sm-12">
                     <div class="card" style="width: 18rem; background-color: #7d968585;">
                         <img src="blues-grinch-2.png" class="card-img-top" alt="...">
                         <div class="card-body">
