--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
         <div class="container">
             <div class="row">
-                <div class="col-md-4 sm-12">
+                <div class="col-lg-4 md-6 sm-12">
                     <div class="card" style="width: 18rem; background-color:  #7d968585;">
                         <img src="twitch.png" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -51,7 +51,7 @@
                         </div>
                     </div>               
                 </div>
-                <div class="col-md-4 sm-12">
+                <div class="col-lg-4 md-6 sm-12">
                     <div class="card" style="width: 18rem; background-color:  #7d968585;">
                         <img src="chonk.png" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -59,7 +59,7 @@
                         </div>
                     </div>    
                 </div>
-                <div class="col-md-4 sm-12">
+                <div class="col-lg-4 md-6 sm-12">
                     <div class="card" style="width: 18rem; background-color: #7d968585;">
                         <img src="blues-grinch-2.png" class="card-img-top" alt="...">
                         <div class="card-body">
